fixed the alignment navbar

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,7 +1,9 @@
 .sticky {
   position: -webkit-sticky;
-	position: sticky;
-	top: 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 10;
 }
 .navbar-horse {
   justify-content: space-between;
@@ -35,6 +37,7 @@
   margin-top: 16px;
   p {
     margin-left: 10px;
+    margin-top: 8px;
   }
 }
 
